--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -22,7 +22,7 @@ h6 {
 }
 
 .topnav {
-    font-size: 14px; 
+    font-size: 16px;
 }
 
 .lead {
@@ -31,7 +31,7 @@ h6 {
 }
 
 .intro-header {
-    height: 60%;
+    height: 450px;
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
@@ -98,12 +98,12 @@ h6 {
 }
 
 .content-section-a {
-    padding: 50px 0;
+    padding: 50px 30px;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
-    padding: 50px 0;
+    padding: 50px 30px;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }
@@ -162,6 +162,14 @@ h6 {
 
     ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
+    }
+
+    .content-section-a {
+        padding: 50px 0;
+    }
+
+    .content-section-b {
+        padding: 50px 0;
     }
 }
 
