--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -30,10 +30,21 @@ h6 {
     font-weight: 400;
 }
 
+.regular {
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.light {
+    color: gray;
+    font-size: 14px;
+    font-weight: 300;
+}
+
 .intro-header {
-    height: 450px;
+    height: 350px;
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     text-align: center;
     color: #f8f8f8;
     background: url(../img/intro-bg-blk.jpg) no-repeat center center;
@@ -42,7 +53,7 @@ h6 {
 
 .intro-message {
     position: relative;
-    padding-top: 10%;
+    padding-top: 8%;
     padding-bottom: 10%;
 }
 
@@ -97,15 +108,24 @@ h6 {
     letter-spacing: 2px;
 }
 
+.content {
+    padding: 20px 50px;
+}
+
 .content-section-a {
-    padding: 50px 30px;
+    padding: 30px 30px;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
-    padding: 50px 30px;
+    padding: 30px 30px;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
+}
+
+.content-footer {
+    padding: 20px 30px;
+    /*background-color: #f8f8f8;*/
 }
 
 .section-heading {
@@ -123,6 +143,7 @@ h6 {
     color: #f8f8f8;
     background: url(../img/banner-bg-blk.jpg) no-repeat center center;
     background-size: cover;
+    text-align: center;
 }
 
 .banner h2 {
