Change code font size for mobile devices.
Change-Id: Ia65e09f64565753b8018926084f351974c86a508

--- a/css/sunburst.css
+++ b/css/sunburst.css
@@ -50,3 +50,9 @@ li.L1,li.L3,li.L5,li.L7,li.L9 { }
   pre .atn, code .atn { color: #404; }
   pre .atv, code .atv { color: #060; }
 }
+
+@media(max-width:767px) {
+ pre.prettyprint, code.prettyprint {
+   font-size: small;
+ }
+}
