--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,6 +21,13 @@ h6 {
     font-weight: 700;
 }
 
+a.anchor {
+    display: block;
+    position: relative;
+    top: -40px;
+    visibility: hidden;
+}
+
 .topnav {
     font-size: 16px;
 }
@@ -114,13 +121,13 @@ h6 {
 
 .content-section-a {
     padding: 30px 30px;
-    background-color: #f8f8f8;
 }
 
 .content-section-b {
     padding: 30px 30px;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
+    background-color: #f8f8f8;
 }
 
 .content-footer {
